XML build error

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -47,7 +47,7 @@
          a keyboard is present. -->
     <bool name="config_showMenuShortcutsWhenKeyboardPresent">false</bool>
 
-    <integer name="config_keyboardBrightnessSettingDefault">255</integer>
+    <!-- <integer name="config_keyboardBrightnessSettingDefault">255</integer> -->
 
     <!-- Workaround for devices with broken keyboards -->
     <bool name="config_forceDisableHardwareKeyboard">false</bool>
